# stm32f446re_skeleton_code

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
cmake/: arm-gcc-toolchain.cmake
src/: main.c  stm32f4xx_it.c
